# blockem

./: ChangeLog  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  config.h  config.h.in  configure  configure.ac
challenges/: Makefile.am  Makefile.in  README  blockem_challenge.dtd  example_challenge.xml  example_challenge2.xml  example_challenge3.xml
pixmaps/: Makefile.am  Makefile.in
src/: AboutDialog.cpp  AboutDialog.h  Board.cpp  Board.h  Coordinate.h  CoordinateSet.h  GUIException.h  Game1v1.cpp  Game1v1.h  GameTotalAllocation.cpp  GameTotalAllocation.h  Heuristic.cpp  Heuristic.h  MainWindow.cpp  MainWindow.h  MainWindowWorkerThread.cpp  MainWindowWorkerThread.h  Makefile  Makefile.am  Makefile.in  Piece.cpp  Piece.h  Player.cpp  Player.h  Rules.cpp  Rules.h  bitwise.cpp  bitwise.h  blockem.rc  blockem_challenge.cpp  blockem_challenge.h  blockem_config.cpp  blockem_config.h  board.cpp  board.h  coordinate.h  coordinate_set.h  g_blocking_queue.h  g_blocking_queue_impl.h  game1v1.cpp  (+73 more)
src/gui/: AboutDialog.cpp  GUIException.h  MainWindow.cpp  dialog_about.cpp  dialog_about.h  dialog_newgame.cpp  dialog_newgame.h  dialog_newgame_widget.h  dialog_newgame_widget_1v1.cpp  dialog_newgame_widget_1v1.h  dialog_newgame_widget_4players.cpp  dialog_newgame_widget_4players.h  dialog_newgame_widget_challenge.cpp  dialog_newgame_widget_challenge.h  dialog_newgame_widget_totalallocation.cpp  dialog_newgame_widget_totalallocation.h  drawing_area_board.cpp  drawing_area_board.h  drawing_area_show_pieces.cpp  drawing_area_show_pieces.h  game1v1_config.cpp  game1v1_config.h  game1v1_config_dialog.cpp  game1v1_config_dialog.h  game1v1_widget.cpp  game1v1_widget.h  game_1v1_config.cpp  game_1v1_config.h  game_1v1_config_dialog.cpp  game_1v1_config_dialog.h  game_1v1_widget.cpp  game_1v1_widget.h  game_4players_config.cpp  game_4players_config.h  game_4players_widget.cpp  game_4players_widget.h  game_challenge_config.cpp  game_challenge_config.h  game_challenge_widget.cpp  game_challenge_widget.h  (+19 more)
src/impl/: board_impl.h  coordinate_impl.h  g_blocking_queue_impl.h  game1v1_impl.h  piece_impl.h  player_impl.h
src/lib/: Game1v1.h  GameTotalAllocation.cpp  GameTotalAllocation.h  Piece.h  Player.cpp
src/lib/test/examples/games/: game.txt  game.txt.1  game.txt.1.old  game.txt.2  game.txt.2.old  game.txt.2b  game.txt.3  game.txt.3.old  game.txt.3b.old  game.txt.4b.old
src/tests/: Game1v1Test.cpp  Game1v1Test.h  Makefile.am  Makefile.in  bitwise_test.cpp  bitwise_test.h  blockem_challenge_test.cpp  blockem_challenge_test.h  board_test.cpp  board_test.h  g_blocking_queue_test.cpp  g_blocking_queue_test.h  game1v1_test.cpp  game1v1_test.h  game_total_allocation_test.cpp  game_total_allocation_test.h  main_test.cpp  piece_test.cpp  piece_test.h  player_test.cpp  player_test.h  rules_test.cpp  rules_test.h
src/tests/challengetest/: challenge_board_ncolumns_invalid.xml  challenge_board_ncolumns_negative.xml  challenge_board_no.xml  challenge_board_no_ncolumns.xml  challenge_board_no_nrows.xml  challenge_board_nrows_invalid.xml  challenge_board_nrows_negative.xml  challenge_challenger_no.xml  challenge_challenger_piece_available_invalid.xml  challenge_challenger_piece_available_invalid_name_bogus.xml  challenge_challenger_piece_available_no.xml  challenge_challenger_starting_col_invalid.xml  challenge_challenger_starting_col_negative.xml  challenge_challenger_starting_col_no.xml  challenge_challenger_starting_col_row_no.xml  challenge_challenger_starting_col_toobig.xml  challenge_challenger_starting_coord_taken_challenger.xml  challenge_challenger_starting_coord_taken_opponent.xml  challenge_challenger_starting_row_invalid.xml  challenge_challenger_starting_row_negative.xml  challenge_challenger_starting_row_no.xml  challenge_challenger_starting_row_toobig.xml  challenge_challenger_taken_col_invalid.xml  challenge_challenger_taken_col_negative.xml  challenge_challenger_taken_col_no.xml  challenge_challenger_taken_col_toobig.xml  challenge_challenger_taken_duplicated_bogus.xml  challenge_challenger_taken_row_invalid.xml  challenge_challenger_taken_row_negative.xml  challenge_challenger_taken_row_no.xml  challenge_challenger_taken_row_toobig.xml  challenge_opponent_activetag_invalid.xml  challenge_opponent_activetag_no.xml  challenge_opponent_no.xml  challenge_opponent_piece_available_invalid.xml  challenge_opponent_piece_available_invalid_name_bogus.xml  challenge_opponent_piece_available_no.xml  challenge_opponent_starting_col_invalid.xml  challenge_opponent_starting_col_negative.xml  challenge_opponent_starting_col_no.xml  (+22 more)
src/tests/examples/games/: game.txt  game.txt.1  game.txt.1.old  game.txt.2  game.txt.2.old  game.txt.2b  game.txt.2b.old  game.txt.3  game.txt.3.old  game.txt.3b  game.txt.3b.old  game.txt.4  game.txt.4b.old  game.txt.empty  game.txt.error.2saf  game.txt.test
src/tests/gcoverage/: do_it.sh
src/tests/gcoverage/blockemtest_coverage/: blockem.gcov  blockem.lcov  index-sort-f.html  index-sort-l.html  index.html
src/tests/gcoverage/blockemtest_coverage/src/: bitwise.cpp.func-sort-c.html  bitwise.cpp.func.html  bitwise.cpp.gcov.html  bitwise.h.func-sort-c.html  bitwise.h.func.html  bitwise.h.gcov.html  board.cpp.func-sort-c.html  index.html  (+43 more)
src/tests/gcoverage/code_coverage/: blockem.gcov  blockem.lcov  index-sort-f.html  index-sort-l.html  index.html
src/tests/gprof/: profile_it.sh
src/tests/gprof/debug/: game.txt.1.gprof  game.txt.1.old.gprof  game.txt.2.gprof  game.txt.2.old.gprof  game.txt.2b.gprof  game.txt.2b.old.gprof  game.txt.3.gprof  game.txt.3.old.gprof  game.txt.3b.gprof  game.txt.3b.old.gprof  game.txt.4.gprof  game.txt.4b.old.gprof  game.txt.empty.gprof  game.txt.gprof  game.txt.test.gprof
src/tests/gprof/release/: game.txt.1.gprof  game.txt.1.old.gprof  game.txt.2.gprof  game.txt.2.old.gprof  game.txt.2b.gprof  game.txt.2b.old.gprof  game.txt.3.gprof  game.txt.3.old.gprof  game.txt.3b.gprof  game.txt.3b.old.gprof  game.txt.4.gprof  game.txt.4b.old.gprof  game.txt.empty.gprof  game.txt.error.2saf.gprof  game.txt.gprof  game.txt.test.gprof
(+460 files in other folders)
