AUTOMAKE_OPTIONS = foreign
# SUBDIRS = src doc examples man scripts
SUBDIRS = src src/tests doc

# other stuff to be distributed without compiling
EXTRA_DIST = \
pixmaps/blockemicon.ico    \
pixmaps/blockemlogo128.png \
pixmaps/blockemlogo16.png  \
pixmaps/blockemlogo48.png  \
pixmaps/blockemlogo.png

pixmapsdir = $(datadir)/@PACKAGE@/pixmaps
# note that 'pixmaps/' must be added in front because it is the directory
# where these files are stored (relative path from the root of the package)
pixmaps_DATA = \
pixmaps/blockemicon.ico    \
pixmaps/blockemlogo128.png \
pixmaps/blockemlogo16.png  \
pixmaps/blockemlogo48.png  \
pixmaps/blockemlogo.png

