AUTOMAKE_OPTIONS = foreign
# SUBDIRS = src doc examples man scripts
# add intl if AM_GNU_GETTEXT is used in configure.ac
SUBDIRS = intl po src src/tests doc

# other stuff to be distributed without compiling
EXTRA_DIST = \
ABOUT-NLS \
config.rpath \
gettext.h \
m4/ChangeLog 

ACLOCAL_AMFLAGS = -I m4
