EXTRA_DIST = \
example_challenge.xml  \
example_challenge2.xml \
example_challenge3.xml

# Note pixmapsdir contains @PACKAGE@. This must be taken into account
# by the binary sources (see gui_glade_defs.h)
challengesdir = $(datadir)/@PACKAGE@/challenges

# note that 'pixmaps/' must be added in front because it is the directory
# where these files are stored (relative path from the root of the package)
challenges_DATA = \
example_challenge.xml  \
example_challenge2.xml \
example_challenge3.xml
