EXTRA_DIST= \
	README  \
    blockem_challenge.dtd  \
    example_challenge.xml  \
    example_challenge2.xml \
    example_challenge3.xml

# Note pixmapsdir contains @PACKAGE@. This must be taken into account
# by the binary sources (see gui_glade_defs.h)
challengesdir = $(datadir)/@PACKAGE@/challenges

challenges_DATA = \
    blockem_challenge.dtd  \
    example_challenge.xml  \
    example_challenge2.xml \
    example_challenge3.xml
