EXTRA_DIST= \
    blockemicon.ico    \
    blockemlogo128.png \
    blockemlogo16.png  \
    blockemlogo32.xpm  \
    blockemlogo48.png  \
    blockemlogo.png    \
    game1vs1.png       \
    gametotalalloc.png \
    gamechallenge.png

# Note pixmapsdir contains @PACKAGE@. This must be taken into account
# by the binary sources (see gui_glade_defs.h)
pixmapsdir = $(datadir)/@PACKAGE@/pixmaps

# note that 'pixmaps/' must be added in front because it is the directory
# where these files are stored (relative path from the root of the package)
pixmaps_DATA = \
    blockemicon.ico    \
    blockemlogo128.png \
    blockemlogo16.png  \
    blockemlogo32.xpm  \
    blockemlogo48.png  \
    blockemlogo.png    \
    game1vs1.png       \
    gametotalalloc.png \
    gamechallenge.png
